# challenge2-data-science

./: README.md  pyproject.toml
data/processed/: telecomx_cleanned.csv
notebooks/: TelecomX_BR.ipynb
