[project]
name = "challenge2-data-science"
version = "0.1.0"
description = "Customer Churn Analysis at Telecom X using Python for data processing, visualization, and EDA."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]
